# Cmake-Template

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp
include/mylib/: mylib.h
include/mylib/one/: helloWorld.h
include/mylib/two/: byeWorld.h
lib/: CMakeLists.txt
lib/googletest/: CMakeLists.txt
src/: CMakeLists.txt
src/one/: helloWorld.cpp
src/two/: byeWorld.cpp  print.cpp  print.h
tests/: CMakeLists.txt
tests/mocks/: CMakeLists.txt  PrintMock.h
tests/unit/: CMakeLists.txt
tests/unit/one/: CMakeLists.txt  HelloWorldTest.cpp
tests/unit/two/: ByeWorldTest.cpp  CMakeLists.txt  PrintTest.cpp
